# QTemplateApp

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
doxygen/: Doxyfile
src/: AppEngine.cpp  AppEngine.hpp  CMakeLists.txt  main.cpp
src/common/: AsyncLogger.hpp  ConfigReader.hpp  FileHelper.hpp  MessagesHandler.hpp  QMsgHandler.hpp  structures.hpp
src/qml/: Main.qml
src/qml/elements/: ActionButton.qml  ChoosePageBtn.qml  ClickableText.qml  CmbBox.qml  InputNumberDialog.qml  MessageDialog.qml  RadioBtn.qml  SliderCustom.qml  TumblerCustom.qml
src/qml/pages/: ConfigPage.qml  FirstPage.qml  InfoPage.qml
test/: README.md
tools/: tapp.desktop
